--- a/JAVA_BASIC/pom.xml
+++ b/JAVA_BASIC/pom.xml
@@ -14,32 +14,42 @@
             <artifactId>json</artifactId>
             <version>20140107</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.8</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>10.0.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava-bootstrap -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava-bootstrap</artifactId>
+            <version>10.0.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305 -->
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>1.3.9</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
     </dependencies>
 
-    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-    <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>10.0.1</version>
-    </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.google.guava/guava-bootstrap -->
-    <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava-bootstrap</artifactId>
-        <version>10.0.1</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305 -->
-    <dependency>
-        <groupId>com.google.code.findbugs</groupId>
-        <artifactId>jsr305</artifactId>
-        <version>1.3.9</version>
-    </dependency>
 
 </project>
